load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//dv:verilator_opts.bzl", "CVA6_VOPTS")

# Verilator side, split from //dv/cva6 so that package stays loadable without
# @rules_verilator / @rules_hdl.

# CVA6's common_cells / axi include dirs are staged (clean single-namespace
# path) inside the @cva6 fetch itself — see bazel/cva6_ext.bzl — so nothing is
# vendored here; the incdir comes transitively via @cva6//:cv64a6_imafdc_sv39.
verilog_library(
    name = "cva6_top",
    srcs = [
        "//dv/cva6:top.sv",
        "//dv/cva6:cva6_test_harness.sv",
    ],
    deps = [
        "//dv/cva6:cva6_rv_tester_sv",
        "@cva6//:cv64a6_imafdc_sv39",
    ],
    top_module = "top",
)

verilator_cc_library(
    name = "cva6_tb_veri_lib",
    module = "cva6_top",
    vopts = CVA6_VOPTS,
)

cc_binary(
    name = "cva6_tb_verilator",
    srcs = ["@rv_tester//test/sw_testbench:sw_tb.cpp"],
    deps = [
        ":cva6_tb_veri_lib",
        "//dv/cva6:dpi_glue",
        "//dv/cva6:cva6_rv_tester_dpi",
        "@cvm//:logger",
        "@cvm//:topology",
        "@rules_verilator//verilator:verilated_runtime",
    ],
    visibility = ["//visibility:public"],
)
