# Smoke: run the pre-built openc910_tb_verilator in lockstep with Whisper.
# infinite.elf is an infinite loop at the reset vector; hello_world.elf runs to
# completion via an HTIF store to `tohost`. sim.sh applies the stdout
# error-pattern check. Both ELFs are generic rv64 images linked at the reset
# vector 0x80000000 (the harness drives pad_core0_rvba to match).
exports_files(
    ["infinite.S", "infinite.elf", "hello_world.elf", "sim.sh"],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "hello_world_openc910_verilator",
    srcs = ["//dv/openc910/testlists:sim.sh"],
    # C910 is a large OoO core; the Verilated cosim run is slow (and slower with
    # +dbg VCD dumping), so give the smoke tests a generous default timeout.
    timeout = "eternal",
    args = [
        "$(location //dv/openc910/verilator:openc910_tb_verilator)",
        "+load=$(location :hello_world.elf)",
        "+memmap_json_path=$(location //dv/openc910:memmap.json)",
        "+whisper_json_path=$(location //dv/openc910:whisper.json)",
        "+nomcm",
        "+eot=tohost",
        "+save_all_files",
    ],
    data = [
        "//dv/openc910/verilator:openc910_tb_verilator",
        "//dv/openc910:memmap.json",
        "//dv/openc910:whisper.json",
        ":hello_world.elf",
    ],
)

sh_test(
    name = "infinite_openc910_verilator",
    srcs = ["//dv/openc910/testlists:sim.sh"],
    timeout = "eternal",
    args = [
        "$(location //dv/openc910/verilator:openc910_tb_verilator)",
        "+load=$(location :infinite.elf)",
        "+memmap_json_path=$(location //dv/openc910:memmap.json)",
        "+whisper_json_path=$(location //dv/openc910:whisper.json)",
        "+nostandalone",
        "+eot=max_instr",
        "+max_instr=8",
    ],
    data = [
        "//dv/openc910/verilator:openc910_tb_verilator",
        "//dv/openc910:memmap.json",
        "//dv/openc910:whisper.json",
        ":infinite.elf",
    ],
)

test_suite(
    name = "all_smoke",
    tests = [
        ":infinite_openc910_verilator",
        ":hello_world_openc910_verilator",
    ],
)
